<resources>
    <string name="app_name">Contact Manager</string>
    <string name="edit">Edit</string>
    <string name="message">message</string>
    <string name="call">call</string>
    <string name="mobile">mobile</string>
    <string name="phone">phone</string>
    <string name="Phone">Phone</string>
    <string name="contacts">Contacts</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="new_contact">New Contact</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="delete">delete</string>
    <string name="save">Save</string>
    <string name="addFromDevice">Add contact from device</string>

</resources>