<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEDED"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ChiTietDanhBaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/txtEdit"
                android:textColor="@color/teal_700"
                android:text="@string/edit" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="right"
                android:id="@+id/txtSave"
                android:textColor="@color/teal_700"
                android:text="@string/save" />

            <EditText
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/txtTen"
                android:layout_marginTop="20dp"
                android:text="Ngoc Thinh"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:id="@+id/btnCall"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/phone" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/btnSms"
                    android:src="@drawable/sms" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rec_radius"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/phone"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:layout_marginStart="20dp"
                    android:id="@+id/txtSoDienThoai"
                    android:text="0384735254"/>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:id="@+id/btnDelete"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/holo_red_dark"/>


        </LinearLayout>
    </ScrollView>


</LinearLayout>